Added convention plugins

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 agp = "8.13.0"
-androidTools = "31.2.2"
+androidTools = "31.13.0"
 coreSplashscreen = "1.0.1"
 coilCompose = "2.7.0"
 composeCompiler = "1.5.9"
@@ -10,19 +10,19 @@ coreKtx = "1.17.0"
 junit = "4.13.2"
 junitVersion = "1.3.0"
 espressoCore = "3.7.0"
-activityCompose = "1.10.1"
+activityCompose = "1.11.0"
 ktor = "3.2.3"
 ktorClientLogging = "3.2.3"
 ktorServerCallLogging = "3.2.3"
 koin = "4.1.1"
 lifecycleRuntimeKtx = "2.9.3"
-composeBom = "2025.08.01"
+composeBom = "2025.09.00"
 materialIconsExtended = "1.7.8"
-navigationCompose = "2.9.3"
+navigationCompose = "2.9.4"
 securityCryptoKtx = "1.1.0"
 timber = "5.0.1"
-ksp = "1.9.22-1.0.17"
-room = "2.7.2"
+ksp = "2.2.10-2.0.2"
+room = "2.8.0"
 appcompat = "1.7.1"
 material = "1.13.0"
 maps = "6.9.0"
@@ -30,7 +30,7 @@ coroutines = "1.10.2"
 gmsLocation = "21.3.0"
 mapsUtils = "5.2.0"
 bson = "5.5.1"
-work = "2.10.3"
+work = "2.10.4"
 kotlinx-serialization = "1.9.0"
 secretsPlugin = "2.0.1"
 playServicesMaps = "19.2.0"
@@ -132,11 +132,20 @@ android-library = { id = "com.android.library", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
-kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 room = { id = "androidx.room", version.ref = "room" }
 jetbrains-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "jetbrainsKotlinJvm" }
+kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 androidDynamicFeature = { id = "com.android.dynamic-feature", version.ref = "agp" }
 mapsplatform-secrets-plugin = { id = "com.google.android.libraries.mapsplatform.secrets-gradle-plugin", version.ref = "secretsPlugin"}
+
+runique-android-application = { id = "runique.android.application", version = "unspecified"}
+runique-android-application-compose = { id = "runique.android.application.compose", version = "unspecified"}
+runique-android-library = { id = "runique.android.library", version = "unspecified"}
+runique-android-library-compose = { id = "runique.android.library.compose", version = "unspecified"}
+runique-android-feature-ui = { id = "runique.android.feature.ui", version = "unspecified"}
+runique-android-room = { id = "runique.android.room", version = "unspecified"}
+runique-jwm-library = { id = "runique.jvm.library", version = "unspecified"}
+runique-jwm-ktor = { id = "runique.jvm.ktor", version = "unspecified"}
 
 #android-application = { id = "com.android.application", version.ref = "agp" }
 #kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
@@ -145,5 +154,27 @@ mapsplatform-secrets-plugin = { id = "com.google.android.libraries.mapsplatform.
 #jetbrains-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "jetbrainsKotlinJvm" }
 
 [bundles]
+compose = [
+    "androidx-activity-compose",
+    "androidx-lifecycle-runtime-compose",
+    "androidx-lifecycle-viewmodel-compose",
+    "androidx-material3",
+    "androidx-ui",
+    "androidx-ui-graphics",
+    "androidx-ui-tooling-preview",
+]
+compose-debug = [
+    "androidx-ui-tooling",
+    "androidx-ui-test-manifest",
+]
 google-play-core = ["play-app-update", "play-app-update-ktx", "play-review", "play-review-ktx"]
-
+koin = ["koin-core", "koin-android", "koin-android-workmanager"]
+koin-compose = ["koin-core", "koin-android", "koin-android-workmanager", "koin-androidx-compose"]
+ktor = [
+    "ktor-client-auth",
+    "ktor-client-cio",
+    "ktor-client-content-negotiation",
+    "ktor-client-core",
+    "ktor-client-logging",
+    "ktor-serialization-kotlinx-json"
+]
