--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -39,6 +39,7 @@ jetbrainsKotlinJvm = "2.2.10"
 playAppUpdate = "2.1.0"
 playReview = "2.0.2"
 ui = "1.9.1"
+playCore = "1.10.3"
 
 # Project versions
 projectApplicationId = "com.nazarkopelchak.runique"
@@ -47,6 +48,7 @@ projectMinSdkVersion = "25"
 projectTargetSdkVersion = "36"
 projectCompileSdkVersion = "36"
 projectVersionCode = "1"
+coreKtxVersion = "1.10.3"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -98,10 +100,11 @@ org-mongodb-bson = { module = "org.mongodb:bson", version.ref = "bson" }
 play-services-maps = { group = "com.google.android.gms", name = "play-services-maps", version.ref = "playServicesMaps" }
 google-maps-android-utils-ktx = { module = "com.google.maps.android:maps-utils-ktx", version.ref = "mapsUtils"}
 annotation = { group = "androidx.annotation", name = "annotation", version.ref = "annotation" }
-play-app-update = { group = "com.google.android.play", name = "app-update", version.ref = "playAppUpdate" }
-play-app-update-ktx = { group = "com.google.android.play", name = "app-update-ktx", version.ref = "playAppUpdate" }
-play-review = { group = "com.google.android.play", name = "review", version.ref = "playReview" }
-play-review-ktx = { group = "com.google.android.play", name = "review-ktx", version.ref = "playReview" }
+core = { module = "com.google.android.play:core", version.ref = "playCore" }
+#play-app-update = { group = "com.google.android.play", name = "app-update", version.ref = "playAppUpdate" }
+#play-app-update-ktx = { group = "com.google.android.play", name = "app-update-ktx", version.ref = "playAppUpdate" }
+#play-review = { group = "com.google.android.play", name = "review", version.ref = "playReview" }
+#play-review-ktx = { group = "com.google.android.play", name = "review-ktx", version.ref = "playReview" }
 
 # Gradle
 android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "agp" }
@@ -169,7 +172,7 @@ compose-debug = [
     "androidx-ui-tooling",
     "androidx-ui-test-manifest",
 ]
-google-play-core = ["play-app-update", "play-app-update-ktx", "play-review", "play-review-ktx"]
+#google-play-core = ["play-app-update", "play-app-update-ktx", "play-review", "play-review-ktx"]
 koin = ["koin-core", "koin-android", "koin-android-workmanager"]
 koin-compose = ["koin-core", "koin-android", "koin-android-workmanager", "koin-androidx-compose"]
 ktor = [
